Update 2021.09.07 FabricOvenTest Format edit

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
@@ -23,7 +23,7 @@
     }
 
     .inner-scroll {
-        height: calc(100vh - 110px);
+        height: calc(100vh - 180px);
         overflow-y: scroll;
         padding-right: 30px;
         width: calc(100% + 30px);
@@ -71,7 +71,12 @@
         color: #000;
     }
 
+    #ButtonMode {
+        width: 92vw;
+    }
+
     .DataTable {
+        width: 92vw;
         font-size: 1rem;
         font-weight: bold;
         border: solid 1px black;
@@ -205,9 +210,9 @@
                                             Picture
                                         </h4>
                                     </td>
-                                    <td style="width: 14vw;">
+                                    <td style="width: 20%;">
                                     </td>
-                                    <td align="right">
+                                    <td>
                                         <h4 id="New">
                                             <img src="~/Image/Icon/New.png" width="30" />
                                             New Item
@@ -276,8 +281,8 @@
                         </table>
                     </div>
 
-                    <div style="margin-top: 1em; overflow:auto;">
-                        <table class="DetailTable DataTable" style='width:210vw'>
+                    <div style="margin-top: 1em; width: 92vw; overflow:auto;">
+                        <table class="DetailTable DataTable" style='width:271vw'>
                             <thead>
                                 <tr>
 
