--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
@@ -157,10 +157,10 @@
                                         Undo
                                     </h4>
                                 </td>
-                                <td style="width: 55%;">
+                                <td style="width: 65%;">
                                 </td>
                                 <td >
-                                    <h4 id="New" style=" margin-right: 10em;">
+                                    <h4 id="New">
                                         <img src="~/Image/Icon/New.png" width="30" />
                                         New Test No
                                     </h4>
